Puppet: Configure neutron_api_class on controller
We're already configuring Neutron in Overcloud, but the controller
is still configured to use the default Nova neutron_api_class for
default configuration for networking, which means it used Nova Network
and not Neutron. This causes some of the Nova API is_neutron
checks to behave incorrectly.

This patch updates the controller to use nova::network::neutron (like
we already do on the overcloud_compute.pp role). As part of the change
several of the compute specific hiera settings for the
nova::network::neutron class have been moved to common.yaml.

Change-Id: Id2d5a5a0aa1ca087de714880ef1ea98484b06849

--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -506,6 +506,18 @@ resources:
             - - 'mysql://neutron:unset@'
               - {get_param: VirtualIP}
               - '/ovs_neutron?charset=utf8'
+        neutron_url:
+          list_join:
+            - ''
+            - - 'http://'
+              - {get_param: VirtualIP}
+              - ':9696'
+        neutron_admin_auth_url:
+          list_join:
+            - ''
+            - - 'http://'
+              - {get_param: VirtualIP}
+              - ':35357/v2.0'
         ceilometer_metering_secret: {get_param: CeilometerMeteringSecret}
         ceilometer_password: {get_param: CeilometerPassword}
         ceilometer_dsn:
@@ -701,6 +713,10 @@ resources:
                 nova::api::admin_password: {get_input: nova_password}
                 nova::database_connection: {get_input: nova_dsn}
                 nova::api::neutron_metadata_proxy_shared_secret: {get_input: neutron_metadata_proxy_shared_secret}
+                nova::network::neutron::neutron_admin_password: {get_input: neutron_password}
+                nova::network::neutron::neutron_url: {get_input: neutron_url}
+                nova::network::neutron::neutron_admin_auth_url: {get_input: neutron_admin_auth_url}
+
                 # Rabbit
                 rabbit_username: {get_input: rabbit_username}
                 rabbit_password: {get_input: rabbit_password}
