puppet: tidy up the Nova ceilo auth configs
Updates the puppet configuration for the Ceilometer auth agent
so that we do the join conversions in the Heat templates and
use only hiera for configuration of the ::ceilometer::agent::auth
class.

Change-Id: I932afafe21b2485a0581ac3910ac9d46161eee0d

--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -287,11 +287,11 @@ resources:
                 #ceilometer::debug: {get_input: debug}
                 ceilometer::metering_secret: {get_input: ceilometer_metering_secret}
                 ceilometer::agent::auth::auth_password: {get_input: ceilometer_password}
+                ceilometer::agent::auth::auth_url: {get_input: ceilometer_agent_auth_url}
                 ceilometer_compute_agent: {get_input: ceilometer_compute_agent}
                 snmpd_readonly_user_name: {get_input: snmpd_readonly_user_name}
                 snmpd_readonly_user_password: {get_input: snmpd_readonly_user_password}
                 nova::glance_api_servers: {get_input: glance_api_servers}
-                keystone_host: {get_input: keystone_host}
                 #neutron::debug: {get_input: debug}
                 neutron_flat_networks: {get_input: neutron_flat_networks}
                 neutron_host: {get_input: neutron_host}
@@ -342,6 +342,12 @@ resources:
         ceilometer_metering_secret: {get_param: CeilometerMeteringSecret}
         ceilometer_password: {get_param: CeilometerPassword}
         ceilometer_compute_agent: {get_param: CeilometerComputeAgent}
+        ceilometer_agent_auth_url:
+          list_join:
+            - ''
+            - - 'http://'
+              - {get_param: KeystoneHost}
+              - ':5000/v2.0'
         snmpd_readonly_user_name: {get_param: SnmpdReadonlyUserName}
         snmpd_readonly_user_password: {get_param: SnmpdReadonlyUserPassword}
         glance_api_servers:
@@ -352,7 +358,6 @@ resources:
               - {get_param: GlanceHost}
               - ':'
               - {get_param: GlancePort}
-        keystone_host: {get_param: KeystoneHost}
         neutron_flat_networks: {get_param: NeutronFlatNetworks}
         neutron_host: {get_param: NeutronHost}
         neutron_local_ip: {get_attr: [NovaCompute, networks, ctlplane, 0]}
