Add support for Neutron l3_ha option in puppet templates
With this change we wire the NeutronL3HA parameter to the puppet
class, where needed.

Change-Id: I37b3850f71885a93859b5e51925df379616fc6ab

--- a/compute.yaml
+++ b/compute.yaml
@@ -168,10 +168,12 @@ parameters:
         The mechanism drivers for the Neutron tenant network. To specify multiple
         values, use a comma separated string, like so: 'openvswitch,l2_population'
     type: string
+  # Not relevant for Computes, should be removed
   NeutronAllowL3AgentFailover:
     default: 'True'
     description: Allow automatic l3-agent failover
     type: string
+  # Not relevant for Computes, should be removed
   NeutronL3HA:
     default: 'False'
     description: Whether to enable l3-agent HA
