--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -168,11 +168,13 @@ parameters:
         The mechanism drivers for the Neutron tenant network. To specify multiple
         values, use a comma separated string, like so: 'openvswitch,l2_population'
     type: string
+  # Not relevant for Computes, should be removed
   NeutronAllowL3AgentFailover:
     default: 'True'
     description: Allow automatic l3-agent failover
     type: string
-  NeutronL3HA: #FIXME this isn't wired in
+  # Not relevant for Computes, should be removed
+  NeutronL3HA:
     default: 'False'
     description: Whether to enable l3-agent HA
     type: string
@@ -319,8 +321,6 @@ resources:
                 neutron_agent_mode: {get_input: neutron_agent_mode}
                 neutron_metadata_proxy_shared_secret: {get_input: neutron_metadata_proxy_shared_secret}
                 neutron_mechanism_drivers: {get_input: neutron_mechanism_drivers}
-                neutron_allow_l3agent_failover: {get_input: neutron_allow_l3agent_failover}
-                neutron_allow_l3agent_failover: {get_input: neutron_allow_l3agent_failover}
                 neutron_public_interface_raw_device: {get_input: neutron_public_interface_raw_device}
                 admin_password: {get_input: admin_password}
                 nova::rabbit_host: {get_input: rabbit_host}
@@ -383,7 +383,6 @@ resources:
         neutron_router_distributed: {get_param: NeutronDVR}
         neutron_metadata_proxy_shared_secret: {get_param: NeutronMetadataProxySharedSecret}
         neutron_mechanism_drivers: {get_param: NeutronMechanismDrivers}
-        neutron_allow_l3agent_failover: {get_param: NeutronAllowL3AgentFailover}
         neutron_public_interface_raw_device: {get_param: NeutronPublicInterfaceRawDevice}
         neutron_url:
           list_join:
