puppet: install Horizon on overcloud-controller
Install OpenStack Dashboad (Horizon) on the Overcloud Controller with
Puppet.

Co-Authored-By: Giulio Fidente <gfidente@redhat.com>

Depends-On: If9b12d373e407be8be8428d77145f131eb450e88
Change-Id: I254e895014f58a51dade3dcdc63eabbb5dc458ac

--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -66,6 +66,10 @@ resources:
                   list_join:
                   - ','
                   - {get_param: controller_ips}
+                memcache_node_ips:
+                  list_join:
+                  - ','
+                  - {get_param: controller_ips}
 
 outputs:
   config_id:
