--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -157,6 +157,9 @@ parameters:
   HeatAuthEncryptionKey:
     description: Auth encryption key for heat-engine
     type: string
+  HorizonSecret:
+    description: Secret key for Django
+    type: string
   Image:
     type: string
     default: overcloud-control
@@ -469,6 +472,7 @@ resources:
               - {get_param: VirtualIP}
               - ':8000/v1/waitcondition'
         heat_auth_encryption_key: {get_param: HeatAuthEncryptionKey}
+        horizon_secret: {get_param: HorizonSecret}
         admin_password: {get_param: AdminPassword}
         admin_token: {get_param: AdminToken}
         neutron_public_interface_ip: {get_param: NeutronPublicInterfaceIP}
@@ -815,6 +819,12 @@ resources:
                 nova::network::neutron::neutron_admin_password: {get_input: neutron_password}
                 nova::network::neutron::neutron_url: {get_input: neutron_url}
                 nova::network::neutron::neutron_admin_auth_url: {get_input: neutron_admin_auth_url}
+
+                # Horizon
+                horizon::django_debug: {get_input: debug}
+                horizon::secret_key: {get_input: horizon_secret}
+                horizon::bind_address: {get_input: controller_host}
+                horizon::keystone_url: {get_input: keystone_auth_uri}
 
                 # Rabbit
                 rabbitmq::node_ip_address: {get_input: controller_host}
