puppet: implement MongoDB on controller nodes
This patch aims to configure MongoDB server on controller nodes with
Puppet.
It also create a default replicaset for Ceilometer, so MongoDB can be
highly available when multiple controllers are run.

Change-Id: I3c1ff06ebc3c9dac44fc790caaea711d0eba4bb7

--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -719,7 +719,8 @@ resources:
                 keystone::public_bind_host: {get_input: controller_host}
                 keystone::admin_bind_host: {get_input: controller_host}
                 keystone::debug: {get_input: debug}
-
+                # MongoDB
+                mongodb::server::bind_ip: {get_input: controller_host}
                 # MySQL
                 admin_password: {get_input: admin_password}
                 enable_galera: {get_input: enable_galera}
