Update puppet post config to enable stepped deployments
The upcoming heat hook/breakpoint features will enable stepped deployments
via setting stop points via the resource_registry.

For this to work, we need hard dependencies between each step of the
puppet deployments, because the current "soft" dependencies caused by the
name property only influences the hook script application ordering, not
the graph traversed by heat during deployment.

Since removing the name: puppet_n completely removes some useful self-
documenting context, move this to a resource naming convention, which
should also be useful for heat hooks/breakpoints, as they are expected
to support globbed specification of each step.

Related heat patch (not yet landed, but this is not dependent on it):

https://review.openstack.org/#/c/146123/

Change-Id: I05b02a46d4e80c08a308d033c33d4901c8f6c94e

--- a/puppet/cinder-storage-post.yaml
+++ b/puppet/cinder-storage-post.yaml
@@ -18,9 +18,8 @@ resources:
       config:
         get_file: manifests/overcloud_volume.pp
 
-  VolumePuppetDeployment:
+  VolumeDeployment_Step1:
     type: OS::Heat::StructuredDeployments
     properties:
-      name: puppet_1
       servers:  {get_param: servers}
       config: {get_resource: VolumePuppetConfig}
