--- a/puppet/swift-storage-post.yaml
+++ b/puppet/swift-storage-post.yaml
@@ -18,10 +18,9 @@ resources:
       config:
         get_file: manifests/overcloud_object.pp
 
-  StoragePuppetDeployment:
+  StorageDeployment_Step1:
     type: OS::Heat::StructuredDeployments
     properties:
-      name: puppet_1
       servers:  {get_param: servers}
       config: {get_resource: StoragePuppetConfig}
 
@@ -34,9 +33,9 @@ resources:
       config:
         get_file: manifests/ringbuilder.pp
 
-  StorageRingbuilderPuppetDeployment:
+  StorageRingbuilderDeployment_Step2:
     type: OS::Heat::StructuredDeployments
+    depends_on: StorageDeployment_Step1
     properties:
-      name: puppet_2
       servers:  {get_param: servers}
       config: {get_resource: StorageRingbuilderPuppetConfig}
