Ensure all Rabbit params are propagated to interested nodes.
Change-Id: I1bb8ee15d361638d77c5df7f8c03561c34f4c88f

--- a/cinder-storage.yaml
+++ b/cinder-storage.yaml
@@ -76,6 +76,16 @@ parameters:
   RabbitUserName:
     default: ''
     type: string
+  RabbitClientUseSSL:
+    default: false
+    description: >
+        Rabbit client subscriber parameter to specify
+        an SSL connection to the RabbitMQ host.
+    type: string
+  RabbitClientPort:
+    default: 5672
+    description: Set rabbit subscriber port, change this if using SSL
+    type: number
   SnmpdReadonlyUserName:
     default: ro_snmp_user
     description: The user name for SNMPd with readonly rights running on all Overcloud nodes
